public/modules/projects/css/projects.css
@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700);
@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700);
@import url(http://fonts.googleapis.com/css?family=Raleway:500,700,400,300);
@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,500,700);
@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300);


.cust-list-profile{
  padding-top: 10px;
  font-size:175px;
}
.hello {


}

.card {
  padding-top: 20px;
  padding-bottom:10px;

  font-family: 'Roboto', sans-serif;

}

.card h1 {
  font-size:20px;
  font-family: 'Roboto', sans-serif;
  color:#202020;
  margin-top:0px;
  margin-bottom:5px;
}

.card h2 {
  font-size:15px;
  margin-top: 2px;
}

.card h3 {
  margin-top:25px;
  font-size: 24px;
  font-weight:500;
  padding-left:10px;
}

.featured-project-img-row{
  padding-top:15px;
}

.featured-project-img-col{
  padding-left: 0px;
  padding-right:0px;
}

.card-content{
  padding:10px;
  padding-bottom:5px;
  margin-bottom:-10px;
  margin-top:-10px;
  border:0px;
  background-color: #FFFFFF;


}

.card-content h1{
  font-family: 'Roboto', sans-serif;
  font-size:1.5em !;
  color:#202020;

}


.profile-circle-card {
  padding-left:15px;
  padding-right:15px;
}


/*

  The create project form.

*/

input[type="text"].search-field, textarea {

  margin-top: -35px;
  margin-bottom: 25px;

  border-bottom: 5px #414141 dashed;
  border-top: 0px;
  border-left: 0px;
  border-right: 0px;

  font-size:25px !important;
  height: 75px;
  font-family: 'Roboto', sans-serif;
  color:#202020;
  font-weight:500;

  border-radius:0px;

  -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075);
  box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075);

}

.create-project-card {
  margin-top: 55px;
}

.create-project-card h1 {

  font-size:60px;
  font-family: 'Roboto', sans-serif;
  color:#202020;
  margin-top:30px;
  margin-bottom:5px;

}


/*

The view project.

*/

.view-project-card {

  margin-top: 55px;
  font-family: 'Roboto', sans-serif;
}

.view-project-card h3{
  margin-top:40px;
  font-size:35px;
  font-weight:500;
}

.project-view-title {
  margin-top:-97px;

  margin-bottom:0;
  position:absolute;

  left:0px;
  width:100%;

}

.background-green {
  background-color:#4caf50;
}
.background-blue {
  background-color:#2196f3;
}
.background-red {
  background-color:#f44336;
}

.background-yellow {
  background-color:#ffeb3b;
}

.background-text {
  background-color:#4caf50;
}
.background-blue {
  background-color:#2196f3;
}
.background-sound {
  background-color:#f44336;
}

.background-image {
  background-color:#fdd835;
}


.project-view-title h1 {
  font-size:2.1em;
  font-family: 'Open Sans', sans-serif;
  font-weight: 400;
  color:#FAFAFA;
  margin-top:20px;
  margin-bottom:5px;
  margin-left:15px;

}


.project-view-title h2 {
  font-family: 'Raleway', serif;
  font-size:1.1em;
  margin-top: 10px;
  color: #FAFAFA;
  margin-left:15px;
  margin-bottom:20px;

}

.profile-circle-view {
  margin-top:20px;
  padding-left:30px;
}
.task-preview-box{
  margin-top:40px;
  padding-top:-10px;
}

.task-preview-project {

  margin-top:0;
  margin-left: 0 !important;
  margin-right: 0 !important;
}


.task-preview-project h1 {

  font-size:2em;
  font-weight:400;
  font-family: 'Open Sans', sans-serif;
  color:rgba(255,255,255,0.95);
  margin-top:10px;
  margin-bottom:10px;
}


.qr-scan-row{
  margin-top:-20px;
  margin-bottom:60px;
}

.login-cover{
  background:rgba(33,150,243,1) ;
  position:absolute;
  top:0;
  height:100%;
  width:100%;
  left:0;
}

.login-cover h1{
  font-size:1.7em;
  font-weight:600;
  font-family: 'Open Sans', sans-serif;
  color:rgba(255,255,255,0.9);
}

.login-cover h2{
  font-size:1.4em;
  font-weight:500;
  font-family: 'Open Sans', sans-serif;
  color:rgba(255,255,255,0.8);
}

.login-cover h3{
  font-size:1.1em;
  font-weight:500;
  font-family: 'Open Sans', sans-serif;
  color:rgba(255,255,255,0.8);
}

